skeleton/terraform/main.tf
provider "aws" {
  region = var.aws_region
}
 
# VPC
resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "Backstage-VPC"  
    }
}
 
# Subnet
resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.subnet_cidr
  availability_zone       = var.availability_zone
  map_public_ip_on_launch = true
}
 
# Internet Gateway
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
}
 
# Route Table
resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.main.id
 
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
}
 
# Associate Route Table with Subnet
resource "aws_route_table_association" "public_rt_assoc" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public_rt.id
}
 
# Security Group
resource "aws_security_group" "ec2_sg" {
  name        = "ec2-sg"
  description = "Allow SSH"
  vpc_id      = aws_vpc.main.id
 
  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "TCP"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
 
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
 
# EC2 Instance
resource "aws_instance" "example" {
  ami                    = "ami-084a7d336e816906b"
  instance_type          = var.instance_type
  subnet_id              = aws_subnet.public.id
  vpc_security_group_ids = [aws_security_group.ec2_sg.id]

  user_data = <<-EOF
              #!/bin/bash
              yum update -y

              # Install Java
              amazon-linux-extras enable corretto11
              yum install -y java-11-amazon-corretto git
              yum install -y maven

              # Clone your Java app repo (use public or private repo)
              cd /home/ec2-user
              git clone https://gitlab.com/hariharpanda3/gitlab-poc.git
              cd gitlab-poc
              chown -R ec2-user:ec2-user /home/ec2-user/gitlab-poc
              # Build and run the app 
              mvn clean install
              
              cd /opt
              curl -O https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.108/bin/apache-tomcat-9.0.108.tar.gz
              tar -xzf apache-tomcat-9.0.108.tar.gz
              mv apache-tomcat-9.0.108 tomcat
              chown -R ec2-user:ec2-user /opt/tomcat
              chmod +x /opt/tomcat/bin/*.sh           

              rm -rf /opt/tomcat/webapps/ROOT

              cp /home/ec2-user/gitlab-poc/target/*.war /opt/tomcat/webapps/
              /opt/tomcat/bin/startup.sh
              EOF
 
  tags = {
    Name = var.instance_name
  }
}
